--- a/vcpractice.html
+++ b/vcpractice.html
@@ -1,7 +1,7 @@
 <HTML>
 
 <HEAD>
-    <TITLE>Your Title Here</TITLE>
+    <TITLE>Version Control Practice</TITLE>
 </HEAD>
 
 <BODY BGCOLOR="FFFFFF">
